--- a/src/main/java/tiendaGUI/catalogoGUI.form
+++ b/src/main/java/tiendaGUI/catalogoGUI.form
@@ -349,6 +349,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="0" rowCount="4"/>
                 </Property>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblCestaMouseClicked"/>
